2002-07-02  Christian Stimming  <stimming@tuhh.de>

	* accounts/fr_FR/*: Add french account hierarchy template by
	Yannick LE NY <y-le-ny@ifrance.com> (might need more work though.)

2002-06-25  David Hampton  <hampton@employees.org>

	* Makefile.am:
	* configure.in:
	* macros/autogen.sh: Update to work with recent toolchains.

2002-06-21  Christian Stimming  <stimming@tuhh.de>

	* po/ru.po: updated Russian translation by Vitaly Lipatov
	<LAV@VL3142.spb.edu>.

2002-06-11  Christian Stimming  <stimming@tuhh.de>

	* po/zh_CN.po: Added Simplified Chinese translation by Yang Yi
	<yang_yi_cn@yahoo.com>.

2002-04-20  Christian Stimming  <stimming@tuhh.de>

	* po/zh_TW.po, po/glossary/zh_TW.po: New traditional Chinese
	translation from ChaoHsiung Liao <pesder@seed.net.tw>.

2002-04-17  Christian Stimming  <stimming@tuhh.de>

	* po/it.po, po/glossary/it.po: Updated Italian translation from
	Lorenzo Cappelletti <L.Cappelletti@mail.com>. (It still remains
	some tax related terms which will be rarely used in Italy.)

2002-04-01  Christian Stimming  <stimming@tuhh.de>

	* po/ja.po: Fixed po-revision-date.
	
	* po/it.po, po/glossary/it.po: Added/Updated Italian translation
	from Lorenzo Cappelletti <L.Cappelletti@mail.com>.

2002-03-16  Chris Lyttle  <chris@wilddev.net>

	* debian/control_fr: removed at request of deb maintainer
	* debian/Makefile.am: updated

2002-03-03  Chris Lyttle  <chris@wilddev.net>

	* configure.in: Added nl to ALL_LINGUAS
	
2002-02-27  Christian Stimming  <stimming@tuhh.de>

	* po/nl.po, po/glossary/nl.po: Added Dutch translation by
	Jan-Willem Harmanny <jwharmanny@hotmail.com>.

2002-02-23  Christian Stimming  <stimming@tuhh.de>

	* po/no.po: updated translation by Kjartan Maraas
	<kmaraas@gnome.org>.

2002-02-19  Christian Stimming  <stimming@tuhh.de>

	* po/ru.po: updated translation by Vitaly Lipatov.

2002-02-18  Christian Stimming  <stimming@tuhh.de>

	* po/el.po: Updated Greek translation by Nikos Charonitakis
	<charosn@her.forthnet.gr>.
